# dtsview

./: CMakeLists.txt  Messages.sh  README.md
icons/: CMakeLists.txt
src/: CMakeLists.txt  dtsview.ui  dtsviewwindow.cpp  dtsviewwindow.h  main.cpp  org.example.dtsview.appdata.xml  org.example.dtsview.desktop
src/libdtc/: data.c  dtc-lexer.lex.c  dtc.c  dtc.h  fdtdump.c  fdtget.c  livetree.c  util.c  util.h
